<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/is_done_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/select_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintBaseline_toBaselineOf="@+id/is_done_checkbox"
        app:layout_constraintEnd_toStartOf="@+id/is_remind_switch"
        app:layout_constraintStart_toEndOf="@+id/is_done_checkbox"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/is_remind_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_remind"
        app:layout_constraintBaseline_toBaselineOf="@+id/select_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/divide_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/divide_line"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_date" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/title"
        android:background="@null"
        android:hint="@string/title"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:textColorHint="@color/colorDeepGray"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/divide_line" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/description"
        android:background="@null"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:paddingHorizontal="20dp"
        android:textColorHint="@color/colorGray"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <ImageView
        android:id="@+id/confirm"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/check_selected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/img" />


</androidx.constraintlayout.widget.ConstraintLayout>